<resources>
    <string name="app_name">Заметки</string>

    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="four_number">4</string>
    <string name="five_number">5</string>
    <string name="six_number">6</string>
    <string name="seven_number">7</string>
    <string name="eight_number">8</string>
    <string name="nine_number">9</string>
    <string name="zero_number">0</string>
    <string name="del_number">←</string>
    <string name="input_text_view">Введите Pin код</string>
    <string name="save_btn">Сохранить</string>
    <string name="del">Удалить</string>


    <string name="headline">Заголовок</string>
    <string name="body">Тело заметки</string>
    <string name="hasDeadline">Крайний срок</string>


        <string name="exit">Выход</string>
        <string name="remove_data">Удалить задачу?</string>
        <string name="remove">Удалить</string>
        <string name="no">Нет</string>
    <string name="note">Заметки</string>
    <string name="editing_note">Редактирование заметки</string>
    <string name="new_note">Новая заметка</string>
    <string name="input">Вход</string>

    <string name="invalid_pin">Неверный пин</string>

    <string name="you_have_already_entered_the_four_digits">Вы уже ввели четры цыфры</string>
    <string name="no_digits_entered">Нету введеных цифр</string>
    <string name="not_enough_characters_for_pin_code">Не достаточно символов для пин кода</string>
    <string name="new_pin">Введите пинкод</string>
    <string name="settings">Настройки</string>
    <string name="сr_change_pin_code">Создание / Изменение пин кода</string>
</resources>
