<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewPin0"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPin1"/>
    <ImageView
        android:id="@+id/imageViewPin1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView"
        app:layout_constraintStart_toEndOf="@+id/imageViewPin0"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPin2"/>
    <ImageView
        android:id="@+id/imageViewPin2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView"
        app:layout_constraintStart_toEndOf="@+id/imageViewPin1"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPin3"/>
    <ImageView
        android:id="@+id/imageViewPin3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewPin2"/>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="68dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/imageViewPin3"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="@+id/imageViewPin0"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPin0">


        <Button
            android:id="@+id/one_btn"
            android:text="@string/one_number" />

        <Button
            android:id="@+id/two_btn"
            android:text="@string/two_number" />

        <Button
            android:id="@+id/three_btn"
            android:text="@string/three_number" />

        <Button
            android:id="@+id/four_btn"
            android:text="@string/four_number" />

        <Button
            android:id="@+id/five_btn"
            android:text="@string/five_number" />

        <Button
            android:id="@+id/six_btn"
            android:text="@string/six_number" />

        <Button
            android:id="@+id/seven_btn"
            android:text="@string/seven_number" />

        <Button
            android:id="@+id/eight_btn"
            android:text="@string/eight_number" />

        <Button
            android:id="@+id/nine_btn"
            android:text="@string/nine_number" />

        <Button
            android:id="@+id/zero_btn"
            android:layout_column="1"
            android:text="@string/zero_number" />

        <Button
            android:id="@+id/del_btn"
            android:layout_column="2"
            android:text="@string/del_number" />


    </GridLayout>

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/input_text_view"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>