<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/newPinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/new_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/hideAndShowBtn"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/newPinText"
        app:layout_constraintStart_toEndOf="@+id/newPinText"
        app:srcCompat="@drawable/ic_eye" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/save_btn"
        app:layout_constraintEnd_toEndOf="@+id/hideAndShowBtn"
        app:layout_constraintStart_toStartOf="@+id/newPinText"
        app:layout_constraintTop_toBottomOf="@+id/newPinText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/сr_change_pin_code"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/newPinText"
        app:layout_constraintStart_toStartOf="@+id/newPinText" />

</androidx.constraintlayout.widget.ConstraintLayout>